# todolist-v1

./: README.md  todolist-v1.code-workspace
backend/: .gitignore  local.db  main.py  pyproject.toml
backend/alembic/: env.py
backend/src/: auth.py  engine.py  error.py  main.py
backend/src/core/: security.py
backend/src/dto/: todolist_dto.py  todolist_dtos.py
backend/src/models/: todolist_model.py  todolist_models.py
backend/src/routes/: user_route.py  user_routes.py
backend/src/services/: auth_service.py  user_service.py  user_services.py
backend/src/tests/: user_test.py
